fix icon alignment and size - bigger

--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -40,7 +40,7 @@ span.pagespeed a:hover {
 }
 .svg-icon {
 	filter: invert(1);
-	width: 20px;
+	width: 24px;
 	vertical-align: bottom;
 }
 
